# ecowatti

./: README.md  pyproject.toml
src/ecowatti_LEMA/: ecowatti.py
