[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecowatti_LEMA"
version = "1.0.0"
authors = [
  { name="Jussi Rosenberg", email="jussi.rosenberg@iki.fi" },
]
description = "Read values from Jäspi Ecowatti boiler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lemanjo/ecowatti"